<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/badge_preview"
        android:textAppearance="?attr/textAppearanceLabelLarge" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badge_style"
        android:textAppearance="?attr/textAppearanceTitleSmall" />

    <RadioGroup
        android:id="@+id/rg_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rb_rings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_rings" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rb_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_number" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rb_none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_none" />
    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badge_show_number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badge_color"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:layout_marginTop="8dp" />

    <RadioGroup
        android:id="@+id/rg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rc0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_c_primary" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rc1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_c_blue" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rc2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_c_green" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rc3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_c_orange" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rc4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_c_purple" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rc5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_c_red" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rc6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_c_grey" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badge_position"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:layout_marginTop="8dp" />

    <RadioGroup
        android:id="@+id/rg_pos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rp_br" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_pos_br" />
        <com.google.android.material.radiobutton.MaterialRadioButton android:id="@+id/rp_bl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_pos_bl" />
    </RadioGroup>
</LinearLayout>
</ScrollView>
