<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:textColor="@color/text_secondary" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname_hint" />

    <CheckBox
        android:id="@+id/separate_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separate_contacts"
        android:checked="true" />
</LinearLayout>
